@startuml
'https://plantuml.com/class-diagram

interface TextEventsSubscribe {
void register(TextEvents listener)
void unregister(TextEvents listener)
}
interface TextModel {
String getTextData()
}

class TextModelImpl {

}

TextEventsSubscribe <|-- TextModelImpl
TextModel <|-- TextModelImpl


interface TextEvents {
void notifyTextModified(String text)
}
TextEvents <--- TextModelImpl

class DisplayAreaWindow
TextEvents <|-- DisplayAreaWindow

@enduml